DuPont DevSB/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Performance_Attribute__c</fullName>
        <description>Performance Attributes the customer is looking for</description>
        <inlineHelpText>Performance Attributes the customer is looking for</inlineHelpText>
        <label>Performance Attribute</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Barrier Performance</fullName>
                </value>
                <value>
                    <fullName>Breathability</fullName>
                </value>
                <value>
                    <fullName>Comfort</fullName>
                </value>
                <value>
                    <fullName>Distributor Promotion</fullName>
                </value>
                <value>
                    <fullName>Durability</fullName>
                </value>
                <value>
                    <fullName>Enhanced Food Texture &amp; Taste</fullName>
                </value>
                <value>
                    <fullName>Food Production Efficiency</fullName>
                </value>
                <value>
                    <fullName>Healthier Food</fullName>
                </value>
                <value>
                    <fullName>Improved Food Safety</fullName>
                </value>
                <value>
                    <fullName>Overall Quality</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Short Delivery Time</fullName>
                </value>
                <value>
                    <fullName>Strong Brand</fullName>
                </value>
                <value>
                    <fullName>Sustainable Food Solutions</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRIKAANS</fullName>
                </value>
                <value>
                    <fullName>ALBANIAN</fullName>
                </value>
                <value>
                    <fullName>ARABIC</fullName>
                </value>
                <value>
                    <fullName>ARMENIAN</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJANI</fullName>
                </value>
                <value>
                    <fullName>BASQUE</fullName>
                </value>
                <value>
                    <fullName>BULGARIAN</fullName>
                </value>
                <value>
                    <fullName>BURMESE</fullName>
                </value>
                <value>
                    <fullName>BYELORUSSIAN</fullName>
                </value>
                <value>
                    <fullName>CHINESE</fullName>
                </value>
                <value>
                    <fullName>CHINESE (Traditional)</fullName>
                </value>
                <value>
                    <fullName>CROATIAN</fullName>
                </value>
                <value>
                    <fullName>CZECH</fullName>
                </value>
                <value>
                    <fullName>DANISH</fullName>
                </value>
                <value>
                    <fullName>DUTCH</fullName>
                </value>
                <value>
                    <fullName>ENGLISH</fullName>
                </value>
                <value>
                    <fullName>ESTONIAN</fullName>
                </value>
                <value>
                    <fullName>FINNISH</fullName>
                </value>
                <value>
                    <fullName>FRENCH</fullName>
                </value>
                <value>
                    <fullName>GERMAN</fullName>
                </value>
                <value>
                    <fullName>GREEK</fullName>
                </value>
                <value>
                    <fullName>HEBREW</fullName>
                </value>
                <value>
                    <fullName>HINDI</fullName>
                </value>
                <value>
                    <fullName>HUNGARIAN</fullName>
                </value>
                <value>
                    <fullName>ICELANDIC</fullName>
                </value>
                <value>
                    <fullName>INDONESIAN</fullName>
                </value>
                <value>
                    <fullName>ITALIAN</fullName>
                </value>
                <value>
                    <fullName>JAPANESE</fullName>
                </value>
                <value>
                    <fullName>KOREAN</fullName>
                </value>
                <value>
                    <fullName>LATIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Customer_Segment__c</fullName>
        <description>Primary Customer Segment determined for this Lead (e.g to drive service levels accordingly)</description>
        <inlineHelpText>Primary Customer Segment determined for this Lead (e.g to drive service levels accordingly)</inlineHelpText>
        <label>Primary Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do-It-Yourself</fullName>
                </value>
                <value>
                    <fullName>Help Me Do It</fullName>
                </value>
                <value>
                    <fullName>Developing/Aspirational</fullName>
                </value>
                <value>
                    <fullName>Basic Job Only</fullName>
                </value>
                <value>
                    <fullName>Operational Excellence</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Comments__c</fullName>
        <description>Comments regarding this lead.</description>
        <inlineHelpText>formerly called Product Comments; may be used for general comments regarding lead.</inlineHelpText>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Details__c</fullName>
        <description>This will replace the Product Comments field on the Lead Object</description>
        <label>Product Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Main products likely to be relevent for this lead</description>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Advanced Stone and Tile Sealer</fullName>
                </value>
                <value>
                    <fullName>Aerosol Grout Sealer</fullName>
                </value>
                <value>
                    <fullName>AirGuard</fullName>
                </value>
                <value>
                    <fullName>Bath Solutions</fullName>
                </value>
                <value>
                    <fullName>BAX® System</fullName>
                </value>
                <value>
                    <fullName>BulletProof Sealer</fullName>
                </value>
                <value>
                    <fullName>Butacite</fullName>
                </value>
                <value>
                    <fullName>Butacite® PV</fullName>
                </value>
                <value>
                    <fullName>Capstone®</fullName>
                </value>
                <value>
                    <fullName>Computer to Plate-Cyrel® Digital Imager</fullName>
                </value>
                <value>
                    <fullName>Conventional Solvent In-The-Round System</fullName>
                </value>
                <value>
                    <fullName>Conventional Solvent Platemaking System</fullName>
                </value>
                <value>
                    <fullName>Conventional Solvent Printing Plates</fullName>
                </value>
                <value>
                    <fullName>Corian</fullName>
                </value>
                <value>
                    <fullName>Cyrel(r) DigiCorr</fullName>
                </value>
                <value>
                    <fullName>Cyrel(r) DigiFlow</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Auto Protection Package</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Caulks &amp; Sealants</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Easysafe</fullName>
                </value>
                <value>
                    <fullName>DuPont™ ForeverLawn®</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Lateral Flow System</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Lubricants &amp; Greases</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Pro-Fusion Color</fullName>
                </value>
                <value>
                    <fullName>DuPont™ RealTouch Laminate Flooring</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Residential Air Filters</fullName>
                </value>
                <value>
                    <fullName>DuPont™ StatMedia™</fullName>
                </value>
                <value>
                    <fullName>DuPont™ StormRoom™ with Kevlar®</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Vinyl Flooring</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Water Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>This is the Salesforce.com program associated with this Lead.</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>QUAL</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchasing_Timing__c</fullName>
        <label>Purchasing Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 3 Months</fullName>
                </value>
                <value>
                    <fullName>4 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>7 - 12 Months</fullName>
                </value>
                <value>
                    <fullName>More than a year</fullName>
                </value>
                <value>
                    <fullName>No plan</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assigned to Distributor/Partner</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Order</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contact</fullName>
                </value>
                <value>
                    <fullName>Low priority  (no need to respond)</fullName>
                </value>
                <value>
                    <fullName>No Commercial interest</fullName>
                </value>
                <value>
                    <fullName>No Contact Necessary</fullName>
                </value>
                <value>
                    <fullName>No feedback from responder</fullName>
                </value>
                <value>
                    <fullName>No lead value (General inquiry)</fullName>
                </value>
                <value>
                    <fullName>No real project (potential customer)</fullName>
                </value>
                <value>
                    <fullName>No response from customer</fullName>
                </value>
                <value>
                    <fullName>No Short Term Plan</fullName>
                </value>
                <value>
                    <fullName>Not in my geography</fullName>
                </value>
                <value>
                    <fullName>Not the right offering</fullName>
                </value>
                <value>
                    <fullName>Potential business value</fullName>
                </value>
                <value>
                    <fullName>Potential sale</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Unable to Reach</fullName>
                </value>
                <value>
                    <fullName>Unable to Supply</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reassigned_date__c</fullName>
        <label>Reassigned date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recent_Incident__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by DuPont Safety Resources to determine if a Recent Incident is the reason the customer is sending a request. The lead agent ascertains and then checks the box, if appropriate.</description>
        <inlineHelpText>Check this box if a Recent Incident is the reason the customer is sending a request.</inlineHelpText>
        <label>Recent Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Geo Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Contact_Status__c</fullName>
        <description>To identify if Lead is matched to a Contact</description>
        <label>Related Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed-Single Contact</fullName>
                </value>
                <value>
                    <fullName>In Progress-Multiple Contacts</fullName>
                </value>
                <value>
                    <fullName>In Progress-No Contact</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Main Contact related to this record (e.g. Common Mailing Contact address in Refinish)</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>No Relationship</fullName>
                </value>
                <value>
                    <fullName>Previous Customer</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remove_workflow_pending_jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove workflow pending jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repeat_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to capture whether the lead is a repeat inquiry/visitor (i.e. has previously visited a website or innovation center).</description>
        <inlineHelpText>Has previously visited (i.e. website or Innovation Center).</inlineHelpText>
        <label>Repeat Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_CAPTCHA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for web-to-lead.  If Require CAPTCHA is true, the web-to-lead application will check for CAPTCHA</description>
        <inlineHelpText>Used for web-to-lead.  If Require CAPTCHA is true, the web-to-lead application will check for CAPTCHA</inlineHelpText>
        <label>Require CAPTCHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <description>Select one or more values which indicate what was done with this lead</description>
        <label>Response Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Paged</fullName>
                </value>
                <value>
                    <fullName>Certificate of Analysis Provided</fullName>
                </value>
                <value>
                    <fullName>Communicated Rejection</fullName>
                </value>
                <value>
                    <fullName>Contact Exists, Closing Lead</fullName>
                </value>
                <value>
                    <fullName>Convert Lead</fullName>
                </value>
                <value>
                    <fullName>Customer Visited</fullName>
                </value>
                <value>
                    <fullName>Customer with No Interest</fullName>
                </value>
                <value>
                    <fullName>DuPont Product under evaluation</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>General Info Provided</fullName>
                </value>
                <value>
                    <fullName>Issued License Agreement</fullName>
                </value>
                <value>
                    <fullName>Literature Provided</fullName>
                </value>
                <value>
                    <fullName>Logo/Trademark Provided</fullName>
                </value>
                <value>
                    <fullName>M/SDS Provided</fullName>
                </value>
                <value>
                    <fullName>Message Taken</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pricing Provided</fullName>
                </value>
                <value>
                    <fullName>Product Info Provided</fullName>
                </value>
                <value>
                    <fullName>Proprietary Statement Sent</fullName>
                </value>
                <value>
                    <fullName>Purchasing Assistance Provided</fullName>
                </value>
                <value>
                    <fullName>Quotation Provided</fullName>
                </value>
                <value>
                    <fullName>Referred to Applicator</fullName>
                </value>
                <value>
                    <fullName>Referred to Business</fullName>
                </value>
                <value>
                    <fullName>Referred to Customer Service</fullName>
                </value>
                <value>
                    <fullName>Referred to Dealer</fullName>
                </value>
                <value>
                    <fullName>Referred to Distributor</fullName>
                </value>
                <value>
                    <fullName>Referred to DuPont Sourcing</fullName>
                </value>
                <value>
                    <fullName>Referred to Emergency Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Body Shop Supervisor</fullName>
                </value>
                <value>
                    <fullName>Business Development Manager</fullName>
                </value>
                <value>
                    <fullName>CEO/President</fullName>
                </value>
                <value>
                    <fullName>Chairman</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Country Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Design Engineer</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Environmental Engineer</fullName>
                </value>
                <value>
                    <fullName>Extrusion supervisor</fullName>
                </value>
                <value>
                    <fullName>Facility Manager</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Geotechnical Consultant</fullName>
                </value>
                <value>
                    <fullName>HSE</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Material Engineer</fullName>
                </value>
                <value>
                    <fullName>Operations Leader</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Employee</fullName>
                </value>
                <value>
                    <fullName>Other Professional</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF2SF_Lead_Has_Been_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox is selected by Process Builder once a replicated Lead has gone thru the Assignment Logic</description>
        <label>SF2SF Lead Has Been Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_P_Applications__c</fullName>
        <description>Multi-select application field for all Safety &amp; Protection SBUs except BI and DCSE</description>
        <inlineHelpText>Applications the product is intended for</inlineHelpText>
        <label>S&amp;P Applications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACC - Air Cargo Covers</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>ACC - Perishables</fullName>
                </value>
                <value>
                    <fullName>ACC - Pest Netting</fullName>
                </value>
                <value>
                    <fullName>ACC - Pharma</fullName>
                </value>
                <value>
                    <fullName>Adhesive</fullName>
                </value>
                <value>
                    <fullName>Aerosols</fullName>
                </value>
                <value>
                    <fullName>Alkylation Technology (Stratco)</fullName>
                </value>
                <value>
                    <fullName>Angioplasty Catheters</fullName>
                </value>
                <value>
                    <fullName>Asphalt</fullName>
                </value>
                <value>
                    <fullName>AUTO-Automatic Transmission Paper</fullName>
                </value>
                <value>
                    <fullName>Auto Belts</fullName>
                </value>
                <value>
                    <fullName>AUTO-Friction</fullName>
                </value>
                <value>
                    <fullName>AUTO-Gaskets</fullName>
                </value>
                <value>
                    <fullName>Auto Hose</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>AUTO-Plastics</fullName>
                </value>
                <value>
                    <fullName>AUTO-Truckbed Liners</fullName>
                </value>
                <value>
                    <fullName>Ballistics</fullName>
                </value>
                <value>
                    <fullName>Bath</fullName>
                </value>
                <value>
                    <fullName>Benchmark Company</fullName>
                </value>
                <value>
                    <fullName>BI-Construction</fullName>
                </value>
                <value>
                    <fullName>Bio-Hazards</fullName>
                </value>
                <value>
                    <fullName>Biomechanical Technology</fullName>
                </value>
                <value>
                    <fullName>Building Materials</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular devices</fullName>
                </value>
                <value>
                    <fullName>Catheters - Tubes</fullName>
                </value>
                <value>
                    <fullName>Cement</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Chemical Hazmat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_P_Market_Segment__c</fullName>
        <description>Multi-select picklist field used by the Safety and Protection Platform for their Market Segments</description>
        <label>S&amp;P Market Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>01- Agriculture &amp; hunting</fullName>
                </value>
                <value>
                    <fullName>02- Forestry &amp; logging</fullName>
                </value>
                <value>
                    <fullName>05- Fishing &amp; aquaculture</fullName>
                </value>
                <value>
                    <fullName>10- Mining of coal and lignite</fullName>
                </value>
                <value>
                    <fullName>11- Extraction/  petroleum &amp; gas</fullName>
                </value>
                <value>
                    <fullName>12- Mining of uranium / thorium ores</fullName>
                </value>
                <value>
                    <fullName>13- Mining of metal ores</fullName>
                </value>
                <value>
                    <fullName>14- Other mining and quarrying</fullName>
                </value>
                <value>
                    <fullName>15- Manuf. of food / beverages</fullName>
                </value>
                <value>
                    <fullName>16- Manuf. of tobacco products</fullName>
                </value>
                <value>
                    <fullName>17- Manuf. of textiles</fullName>
                </value>
                <value>
                    <fullName>18- Manuf. of  apparel</fullName>
                </value>
                <value>
                    <fullName>19- Tanning and leather Manuf.</fullName>
                </value>
                <value>
                    <fullName>20- Manuf. of wood products</fullName>
                </value>
                <value>
                    <fullName>21- Manuf. of paper products</fullName>
                </value>
                <value>
                    <fullName>22- Publishing/printing &amp; reproduction</fullName>
                </value>
                <value>
                    <fullName>23- Manuf. coke/ petroleum &amp; nuclear</fullName>
                </value>
                <value>
                    <fullName>24- Manuf. of chemicals &amp; products</fullName>
                </value>
                <value>
                    <fullName>25- Manuf. of rubber &amp; plastics</fullName>
                </value>
                <value>
                    <fullName>26- Manuf.of non metallic mineral prod</fullName>
                </value>
                <value>
                    <fullName>27- Manuf. of basic metals</fullName>
                </value>
                <value>
                    <fullName>28- Manuf. fabricated metal products</fullName>
                </value>
                <value>
                    <fullName>29- Manuf. of machinery &amp; equipment</fullName>
                </value>
                <value>
                    <fullName>30- Manuf. of office machinery</fullName>
                </value>
                <value>
                    <fullName>31- Manuf. of electrical machinery</fullName>
                </value>
                <value>
                    <fullName>32- Manuf. radio, TV &amp; communication</fullName>
                </value>
                <value>
                    <fullName>33- Manuf. medical &amp; precision instr.</fullName>
                </value>
                <value>
                    <fullName>34- Manuf.of motor vehicles &amp; trailers</fullName>
                </value>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>Auto Auction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>